img-gallery gap fix

--- a/masonry-gallery.css
+++ b/masonry-gallery.css
@@ -3,44 +3,13 @@ img {
   display: block;
 }
 
-figure {
-  margin: 0;
-  display: grid;
-  grid-template-rows: 1fr auto;
-  margin-bottom: 10px;
-  break-inside: avoid;
-}
-
-figure > img {
-  grid-row: 1 / -1;
-  grid-column: 1;
-}
-
-figure a {
-  color: black;
-/*  text-decoration: none;*/
-}
-
-figcaption {
-  grid-row: 2;
-  grid-column: 1;
-  background-color: rgba(255,255,255,.5);
-  padding: .2em .5em;
-  justify-self: start;
-}
-
 .container {
   column-count: 2;
-  column-gap: 10px;
+  column-gap: 0;
   background-color: var(--primary-color);
   border-width: 0 2px 0 2px;
   border:solid var(--border-color);
 }
-
-/*@media only screen and (max-width: 776px) {
-.container{
-  column-count: 2;
-}*/
 
 @media only screen and (max-width: 478px) {
 .container{
